[gd_scene load_steps=17 format=2]

[ext_resource path="res://Animations/0 Charge.tres" type="Animation" id=1]
[ext_resource path="res://Animations/60.tres" type="Animation" id=2]
[ext_resource path="res://Animations/40.tres" type="Animation" id=3]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Water Meter.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Chief Rainbow.png" type="Texture" id=6]
[ext_resource path="res://Animations/20.tres" type="Animation" id=7]
[ext_resource path="res://Animations/80.tres" type="Animation" id=8]
[ext_resource path="res://Animations/Walk Left.tres" type="Animation" id=9]
[ext_resource path="res://Animations/Walk Right.tres" type="Animation" id=10]
[ext_resource path="res://Sprites/Super soaker water gun.png" type="Texture" id=11]
[ext_resource path="res://Sprites/TreeTestParallax.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.82738, 9.61846 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.57062, 19.5266 )

[sub_resource type="Animation" id=3]
resource_name = "Stand Left"
tracks/0/type = "value"
tracks/0/path = NodePath("CharSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CharSprite/Super soaker water gun:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -12.1851, -0.457934 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CharSprite/Super soaker water gun:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("CharSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CharSprite/Super soaker water gun:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11.8963, 0.799881 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CharSprite/Super soaker water gun:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="CharSprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( -9.53674e-07, -16 )
scale = Vector2( 1, 1.3 )
texture = ExtResource( 6 )
vframes = 3
hframes = 3
frame = 3

[node name="Super soaker water gun" type="Sprite" parent="CharSprite"]
position = Vector2( -12.1851, -0.457934 )
scale = Vector2( 0.4, 0.307692 )
texture = ExtResource( 11 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7.64221 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -10 )
offset = Vector2( 0, -50 )
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 10.0

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 0, -16.0181 )
shape = SubResource( 2 )

[node name="Water Meter" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 0, -45 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
vframes = 5
frame = 4

[node name="WaterDropAnim" type="AnimationPlayer" parent="."]
"anims/0 Charge" = ExtResource( 1 )
anims/20 = ExtResource( 7 )
anims/40 = ExtResource( 3 )
anims/60 = ExtResource( 2 )
anims/80 = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Stand Left" = SubResource( 3 )
"anims/Stand Right" = SubResource( 4 )
"anims/Walk Left" = ExtResource( 9 )
"anims/Walk Right" = ExtResource( 10 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -3.1748, 1.5874 )
motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( 0, -250 )
motion_mirroring = Vector2( 512, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 12 )
centered = false

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 767.619, 255.619 )
texture = ExtResource( 12 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
